fix: fix alignment

--- a/src/components/Headbar/Headbar.module.css
+++ b/src/components/Headbar/Headbar.module.css
@@ -5,7 +5,7 @@
   width: 100wh;
   color: #333333;
   padding: 0 135px 0 135px;
-
+  justify-content: center;
   /* -webkit-box-shadow: 0px -1px 12px 10px rgba(0, 0, 0, 0.58);
   -moz-box-shadow: 0px -1px 12px 10px rgba(0, 0, 0, 0.58);
   box-shadow: 0px -1px 12px 10px rgba(0, 0, 0, 0.58); */
@@ -36,6 +36,7 @@
 }
 
 .conLinks {
+  width: 770px;
   display: flex;
   flex-direction: row;
   margin-left: 330px;
